k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sigadash-frontend
  namespace: sigadash
  labels:
    app: sigadash-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sigadash-frontend
  template:
    metadata:
      labels:
        app: sigadash-frontend
    spec:
      containers:
        - name: sigadash-frontend
          image: 533315175931.dkr.ecr.us-east-1.amazonaws.com/amsa-sigadash-frontend
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config-volume
              mountPath: /app/config
              readOnly: true
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
          imagePullPolicy: Always
      volumes:
        - name: config-volume
          secret:
            secretName: sigadash-config-file
            optional: true
