k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sigadash-frontend
  namespace: sigadash
spec:
  selector:
    app: sigadash-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
